Update README, pom.xml and make it Java 8 compatible (#41)
* Make it Java 8 compatible

* Update versions

* Update README with better description

* Change theme to UNICODE